# cloudcomputing

./: DOCUMENTATION.md  LICENSE  PROPOSAL.md  README.md  architecture-diagram.plantuml  setDeploymentImage.sh
.github/workflows/: build_application.yml
cluster/: .gitignore
cluster/argo/: kustomization.yaml  values.yaml
cluster/argo/resources/: apps.yaml  certificate.yaml  ingress.yaml
cluster/certficiate/: kustomization.yaml
cluster/certficiate/resources/: certificate.yaml
cluster/certificate/resources/: certificate.yaml
cluster/common/: kustomization.yaml
cluster/common/resources/: middleware.yaml
cluster/corona-backend/: kustomization.yaml
cluster/corona-backend/resources/: deployment.yaml  ingress.yaml  service.yaml
cluster/country-backend/: kustomization.yaml
cluster/country-backend/resources/: deployment.yaml  ingress.yaml  service.yaml
cluster/frontend/: kustomization.yaml
cluster/frontend/resources/: deployment.yaml  ingress.yaml  service.yaml
cluster/registry/: kustomization.yaml  values.yaml
cluster/registry/resources/: ingress.yaml
corona-backend/: .gitignore  Cargo.toml  Dockerfile
corona-backend/src/: client.rs  handlers.rs  main.rs
country-backend/: Dockerfile  index.ts  package-lock.json  package.json  tsconfig.json
country-backend/data/: countries.json
country-backend/src/: index.ts
country-backend/types/: countryData.ts
frontend/: .eslintignore  .eslintrc.js  .prettierrc.js  Dockerfile  README.md  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.test.tsx  App.tsx  index.tsx
(+10 files in other folders)
