[package]
name = "corona-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.14"
actix-cors = "0.6.0-beta.6"

cached = "0.26"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros"] }

log = "0.4"
simplelog = "0.11"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "1.11", features = ["macros"] }

reqwest = { version = "0.11", features = ["json"] }
# hyper-tls = { versio = "", features = ["vendored"] }

# rustls = "0.20"
# openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_env = "musl")'.dependencies]
jemallocator = "0.3"

[features]

# default = ["reqwest/native-tls-vendored"]

# rustls = ["actix-web/rustls", "reqwest/rustls", "reqwest/tokio-rustls"]